--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,7 +1,217 @@
+:root{
+--boxColor: aliceblue;
+--buttonColor: rgb(145, 87, 87);
+
+}
+
+* {
+    box-sizing: border-box;
+    background-color:rgb(81, 80, 80);
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.highscores p {
+    background-color: var(--boxColor);
+    padding: 8px;
+    border-style: solid;
+    border-radius: 4px;
+}
+
+#timerbox {
+    display:flex;
+    align-items: center;
+}
+
+#timer {
+    background-color: var(--boxColor);
+    padding: 8px;
+    border-style: solid;
+    border-radius: 4px;
+}
+
+#count {
+    background-color: var(--boxColor);
+}
+
+.quiz-container{
+    display: flex;
+    justify-content: center;
+}
+ 
+#challenge{
+    background-color:var(--boxColor);
+    margin-top:  16px;
+    border-style: solid;
+    width: 500px;
+    border-radius: 10px;
+    padding-bottom: 8px;
+}
+
+#challenge h3{
+    background-color: var(--boxColor);
+    text-align: center;
+}
+
+#challenge p {
+background-color:var(--boxColor);
+   padding-right: 80px;
+   padding-left: 80px;
+}
+
+#start {
+    position: relative;
+    left: 200px;
+    bottom: 5px;
+    padding: 10px;
+    background-color: var(--buttonColor);
+    border-radius: 5px;
+}
+
 #quiz {
     display: none;
+    background-color: var(--boxColor);
+    margin-top:  16px;
+    border-style: solid;
+    width: 500px;
+    border-radius: 10px;
+    padding-bottom: 8px;
+}
+
+#questn {
+    background-color:var(--boxColor);
+    text-align: center;
+}
+
+#quiz p{
+    background-color: var(--boxColor);
+    text-align: center;
+    font-weight: bold;
+}
+
+#quiz ul{
+   position: relative;
+   background-color:var(--boxColor);
+   list-style-type: none;
+   margin:0;
+
+}
+
+#quiz ul li {
+    background-color:var(--boxColor);
+    position:relative;
+    right: 35px;
+}
+
+#bttn1, #bttn2, #bttn3, #bttn4 {
+    position: relative;
+    left: 115px;
+    top: 35px;
+    background-color: var(--buttonColor);
+    border-radius: 5px;
+    padding: 6px;
+}
+
+#answerBox {
+    background-color: var(--boxColor);
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+#answer {
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+    text-align: center;
+    padding-top: 10px;
+    text-decoration: overline;
 }
 
 #quizForm {
     display: none;
+    background-color: var(--boxColor);
+    margin-top:  16px;
+    border-style: solid;
+    width: 500px;
+    border-radius: 10px;
+    padding-bottom: 8px;
+}
+
+#quizForm h3 {
+    background-color: var(--boxColor);
+    text-align: center;
+}
+
+#quizForm p, #score {
+    background-color: var(--boxColor);
+    text-align: center;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    background-color: var(--boxColor);
+}
+
+#initials {
+ background-color: var(--boxColor);
+}
+
+#submit {
+    background-color: var(--buttonColor);
+    margin-left: 5px;
+}
+
+#highscoreform {
+    display: flex;
+    justify-content: center;
+}
+
+#highscore {
+    background-color: var(--boxColor);
+    margin-top:  16px;
+    border-style: solid;
+    width: 500px;
+    border-radius: 10px;
+    padding-bottom: 8px;
+}
+
+#highscore h3 {
+    background-color: var(--boxColor);
+    text-align:center
+}
+#score-list {
+    background-color: var(--boxColor);
+    padding-left: 0;
+}
+
+#score-list li {
+    background-color: var(--boxColor);
+    list-style-type: none;
+    padding-left: 0;
+    text-align:center;
+}
+
+#twobtn {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    background-color: var(--boxColor);
+}
+
+#clearhsbtn {
+    background-color: var(--buttonColor);
+    padding: 3px;
+    border-radius: 3px;
+}
+
+#backbtn {
+    background-color: var(--buttonColor);
+    margin-top: 6px;
+    padding: 3px;
+    border-radius: 3px;
 }
